exports[`PaginationLinks should match snapshot with both links disabled 1`] = `
<nav
  className="">
  <div
    className="">
    <PrevPageIcon
      className={null} />
  </div>
  <div
    className="">
    <NamedLink
      className="undefined"
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=1&param=foobar",
        }
      }>
      1
    </NamedLink>
  </div>
  <div
    className="">
    <NextPageIcon
      className={null} />
  </div>
</nav>
`;

exports[`PaginationLinks should match snapshot with both links enabled 1`] = `
<nav
  className="">
  <NamedLink
    name="SomePage"
    params={
      Object {
        "id": "some-page-id",
      }
    }
    title="PaginationLinks.previous"
    to={
      Object {
        "search": "page=1&param=foobar",
      }
    }>
    <PrevPageIcon
      className={null} />
  </NamedLink>
  <div
    className="">
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=1&param=foobar",
        }
      }>
      1
    </NamedLink>
    <NamedLink
      className="undefined"
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=2&param=foobar",
        }
      }>
      2
    </NamedLink>
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=3&param=foobar",
        }
      }>
      3
    </NamedLink>
  </div>
  <NamedLink
    name="SomePage"
    params={
      Object {
        "id": "some-page-id",
      }
    }
    title="PaginationLinks.next"
    to={
      Object {
        "search": "page=3&param=foobar",
      }
    }>
    <NextPageIcon
      className={null} />
  </NamedLink>
</nav>
`;

exports[`PaginationLinks should match snapshot with prev disabled and next enabled 1`] = `
<nav
  className="">
  <div
    className="">
    <PrevPageIcon
      className={null} />
  </div>
  <div
    className="">
    <NamedLink
      className="undefined"
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=1&param=foobar",
        }
      }>
      1
    </NamedLink>
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=2&param=foobar",
        }
      }>
      2
    </NamedLink>
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=3&param=foobar",
        }
      }>
      3
    </NamedLink>
  </div>
  <NamedLink
    name="SomePage"
    params={
      Object {
        "id": "some-page-id",
      }
    }
    title="PaginationLinks.next"
    to={
      Object {
        "search": "page=2&param=foobar",
      }
    }>
    <NextPageIcon
      className={null} />
  </NamedLink>
</nav>
`;

exports[`PaginationLinks should match snapshot with prev enabled and next disabled 1`] = `
<nav
  className="">
  <NamedLink
    name="SomePage"
    params={
      Object {
        "id": "some-page-id",
      }
    }
    title="PaginationLinks.previous"
    to={
      Object {
        "search": "page=2&param=foobar",
      }
    }>
    <PrevPageIcon
      className={null} />
  </NamedLink>
  <div
    className="">
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=1&param=foobar",
        }
      }>
      1
    </NamedLink>
    <NamedLink
      className=""
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=2&param=foobar",
        }
      }>
      2
    </NamedLink>
    <NamedLink
      className="undefined"
      name="SomePage"
      params={
        Object {
          "id": "some-page-id",
        }
      }
      title="PaginationLinks.toPage"
      to={
        Object {
          "search": "page=3&param=foobar",
        }
      }>
      3
    </NamedLink>
  </div>
  <div
    className="">
    <NextPageIcon
      className={null} />
  </div>
</nav>
`;
